force-app/main/default/objects/Transaction__c/fields/TransactionDateTime__c.field-meta.xml
<CustomField>
    <fullName>TransactionDateTime__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Transaction Date Time</label>
    <type>DateTime</type>
</CustomField>