force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Type__c</columns>
    <columns>Description__c</columns>
    <columns>TransactionDateTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>